# TheConstructROSexcercises

./: __freq_cmds.txt  __vscode_settings.json
P1/S1/robot_description/: package.xml
P1/S1/robot_description/scripts/: move-display-odom_1.py
P1/S1/robot_description/urdf/: robot.xacro
P1/S1/studying_gazebo/worlds/: population.world
P1/S1/writing_plugins/: package.xml
P1/S1/writing_plugins/launch/: gazebo.launch
P1/S1/writing_plugins/src/: a_model_plugin.cc  my_model_plugin.cc  world_plugin.cc
P1/S1/writing_plugins/worlds/: model.world
P1/S2/: __common_commands.txt  __vscode_settings.txt
P1/S2/src/: laser.bag
P1/S2/src/my_custom_srv_msg_pkg_648/: CMakeLists.txt  package.xml
P1/S4/src/test_library/: CMakeLists.txt  package.xml
P1/S4/src/test_library/include/test_library/: test_library.h
P1/S4/src/test_library/src/: test_library.cpp
P1S1/robot_description/launch/: robot_control.launch  rviz.launch  spawn.launch
P1S1/robot_description/urdf/: robot.gazebo
P1S1/studying_gazebo/launch/: dem.launch  population.launch
P1S1/writing_plugins/src/: my_gazebo_plugin.cc
P1S1/writing_plugins/worlds/: gazebo.world
robot_description/: view-model.rviz
robot_description/config/: robot_control.yaml
robot_description/launch/: empty_world.launch
robot_description/scripts/: move-display-odom.py
robot_description/urdf/: _temp_robot.urdf.txt
studying_gazebo/launch/: empty_world.launch
studying_gazebo/models/custom_shape/: model.config  model.sdf
studying_gazebo/worlds/: dem.world  example-gui.world  example2.world
writing_plugins/: CMakeLists.txt
(+143 files in other folders)
